--- a/capstone1/notebooks/eda_deep_dive.ipynb
+++ b/capstone1/notebooks/eda_deep_dive.ipynb
@@ -452,7 +452,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": ".venv",
             "language": "python",
             "name": "python3"
         },
@@ -466,7 +466,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.12.0"
+            "version": "3.13.9"
         }
     },
     "nbformat": 4,
